# agent-issue-tracker

./: .dockerignore  .env.example  .gitignore  Caddyfile  DEPLOY.md  Dockerfile  README.md  deploy.sh  docker-compose.yml  pyproject.toml  setup.sh
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  api.js  markdown.js  styles.css
frontend/src/components/: ActivityFeed.vue  GraphView.vue  IssueDetail.vue  IssueList.vue  KnowledgePanel.vue  LoginView.vue  MobileView.vue  Toasts.vue
skills/issue-tracker/: SKILL.md
src/issue_tracker/: __init__.py  app.py  auth.py  backends.py  cli.py  config.py  db.py  store.py
src/issue_tracker/static/: index.html
src/issue_tracker/static/assets/: index-BJZBRIm_.css  index-CXgru9ma.css  index-Cla6743W.js  index-bf-TgLX2.js
